# sshijacking

./: .README.txt.swp  README.md  README.txt  READMEBROWSER.txt  READMENC.txt  fungsi.js.back
extension/chrome/: README.md  fungsi.js  manifest.json
extension/firefox/: README.md  fungsi.js  index.html  manifest.json  memek.xpi
ssTools/botbrowser/go/: README.md  main.go
ssTools/botbrowser/java/: App.java  README.md  list.back
ssTools/botbrowser/js/: README.md  index.js
ssTools/botbrowser/php/: README.md  composer.json  index.php  let.bak
ssTools/botbrowser/python/: README.md  browserbot.py  browserbot.py.bal
ssTools/botbrowser/ruby/: README.md  browserbot.rb
ssTools/botbrowser/rust/: Cargo.toml  README.md  bekup.rs.bek  browserbot.rs
ssTools/kukijson/c++/: README.md  kukijson.cpp
ssTools/kukijson/go/: README.md  kukijson.go
ssTools/kukijson/java/: README.md
ssTools/kukijson/js/: README.md  kukijson.js
ssTools/kukijson/php/: README.md  kukijson.php
ssTools/kukijson/python/: README.md  kukijson.py
ssTools/kukijson/ruby/: README.md  kukijson.rb
ssTools/kukijson/rust/: Cargo.toml  README.md  kukijson.rs
ssTools/kukiurldecode/c++/: README.md  kukiurldecode  kukiurldecode.cpp
ssTools/kukiurldecode/go/: README.md  kukiurldecode  kukiurldecode.go
ssTools/kukiurldecode/java/: README.md
ssTools/kukiurldecode/js/: README.md  kukiurldecode.js
ssTools/kukiurldecode/php/: README.md  kukiurldecode.php
ssTools/kukiurldecode/python/: README.md  kukiurldecode.py
ssTools/kukiurldecode/ruby/: README.md  kukiurldecode.rb
ssTools/netcat/c++/: nc  (+2 more)
(+24 files in other folders)
