[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
color-eyre = "0.6.2"
tokio = { version = "1", features = ["full"] }
url = "2.2"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }


[[bin]]
name = "browserbot"
path = "browserbot.rs"
